--- a/app/design/frontend/alvaro/default/template/page/html/header.phtml
+++ b/app/design/frontend/alvaro/default/template/page/html/header.phtml
@@ -34,7 +34,8 @@
             <?php echo $this->getChildHtml('store_language') ?>
         </div>
 
-        <?php echo $this->getChildHtml('currency_switcher') ?>
+        <?php //echo $this->getChildHtml('currency_switcher') ?>
+        <?php echo $this->getChildHtml('header_links') ?>
 
         <p class="welcome-msg"><?php echo $this->getChildHtml('welcome') ?> <?php echo $this->getAdditionalHtml() ?></p>
     </div>
